// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty match snapshots 1`] = `
<DocumentFragment>
  <div
    class="ant-empty dtc-empty"
  >
    <div
      class="ant-empty-image"
    >
      <img
        src="empty_default.png"
      />
    </div>
    <div
      class="ant-empty-description"
    >
      No data
    </div>
  </div>
</DocumentFragment>
`;

exports[`Empty match snapshots 2`] = `
<DocumentFragment>
  <div
    class="ant-empty dtc-empty dtc-empty__large"
  >
    <div
      class="ant-empty-image"
    >
      <img
        src="empty_default.png"
      />
    </div>
    <div
      class="ant-empty-description"
    >
      No data
    </div>
  </div>
</DocumentFragment>
`;
